made file structure using the library

--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ EMAIL="delawitgetu@gmail.com"
 EMAIL_PASSWORD="wcow bhiq wzfa dcns"
 BETTER_AUTH_SECRET="abebe beso bela"
 BETTER_AUTH_URL=http://localhost:8888 #Base URL of your app
+GITHUB_CLIENT_ID=Ov23liGlp78MJM82mtRC
+GITHUB_CLIENT_SECRET=c337807e927834239ced1d5403934dedcd4cba90
