--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "ekub_prisma_typescript",
   "version": "1.0.0",
-  "main": "app.ts",
+  "main": "server.ts",
   "type": "module",
   "scripts": {
-    "start": "nodemon dist/app.js",
+    "start": "nodemon dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsc -w & nodemon dist/app.js",
     "build": "tsc"
